# financial-tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
config/: .env.template
config/schemas/: transactions.schema.yaml
docs/: experiments.md  stage2_next_steps.md
scripts/: access_token_validation.py  bronze_ingest_sync_events.py  build_duckdb_views_and_assert_silver.py  build_silver_transactions_scd2.py  create_link_token.py  transactions_sync_backfill.py  transactions_sync_ingest_raw.py  validate_normalized.py
src/financial_tracker/: delta_writer.py  fetch_transactions.py  google_sync.py  logging_utils.py  materialize_delta.py  normalization.py
src/financial_tracker/io/: sheets_sink.py
src/financial_tracker/scripts/: materialize_delta.py
